# rust-supabase-client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/supabase-client/: Cargo.toml
crates/supabase-client-auth/: Cargo.toml  README.md
crates/supabase-client-auth/src/: admin.rs  client.rs  error.rs  lib.rs  params.rs  types.rs
crates/supabase-client-auth/tests/: integration.rs
crates/supabase-client-core/: Cargo.toml  README.md
crates/supabase-client-core/src/: client.rs  config.rs  error.rs  lib.rs  platform.rs  response.rs  value.rs
crates/supabase-client-derive/: Cargo.toml  README.md
crates/supabase-client-derive/src/: lib.rs  parse.rs  table_impl.rs
crates/supabase-client-functions/: Cargo.toml  README.md
crates/supabase-client-functions/src/: client.rs  error.rs  lib.rs  types.rs
crates/supabase-client-functions/tests/: integration.rs
crates/supabase-client-query/: Cargo.toml  README.md
crates/supabase-client-query/src/: backend.rs  builder.rs  csv_select.rs  delete.rs  execute.rs  filter.rs  generate.rs  geojson_select.rs  insert.rs  lib.rs  modifier.rs  postgrest.rs  postgrest_execute.rs  rpc.rs  select.rs  sql.rs  table.rs  update.rs  upsert.rs
crates/supabase-client-query/tests/: rest_integration.rs
crates/supabase-client-realtime/: Cargo.toml  README.md
crates/supabase-client-realtime/src/: callback.rs  channel.rs  client.rs  error.rs  lib.rs  presence.rs  protocol.rs  types.rs
crates/supabase-client-realtime/src/transport/: mod.rs  native.rs  wasm.rs
crates/supabase-client-realtime/tests/: integration.rs
crates/supabase-client-sdk/: Cargo.toml  README.md
crates/supabase-client-sdk/examples/: advanced_queries.rs  full_client.rs  functions.rs  realtime.rs  storage.rs  typed_queries.rs  wasm_usage.html
crates/supabase-client-sdk/src/: lib.rs
crates/supabase-client-storage/: Cargo.toml  README.md
crates/supabase-client-storage/src/: bucket_api.rs  client.rs  error.rs  lib.rs  types.rs
crates/supabase-client-storage/tests/: integration.rs
crates/supabase-client-wasm/: Cargo.toml  README.md
crates/supabase-client-wasm/src/: lib.rs
crates/supabase-client/examples/: advanced_queries.rs  auth.rs  functions.rs  query_basics.rs  realtime.rs  storage.rs  typed_queries.rs
crates/supabase-client/src/: lib.rs
crates/supabase-client/tests/: integration.rs
supabase/: config.toml
supabase/functions/echo-binary/: index.ts
supabase/functions/echo-headers/: index.ts
supabase/functions/echo-method/: index.ts
supabase/functions/hello/: index.ts
supabase/migrations/: 20240101000000_test_tables.sql
