[workspace]
resolver = "2"
members = [
    "crates/supabase-client-sdk",
    "crates/supabase-client-core",
    "crates/supabase-client-query",
    "crates/supabase-client-derive",
    "crates/supabase-client-auth",
    "crates/supabase-client-realtime",
    "crates/supabase-client-storage",
    "crates/supabase-client-functions",
    "crates/supabase-client-wasm",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/Brainwires/rust-supabase-client"
homepage = "https://github.com/Brainwires/rust-supabase-client"
authors = ["Brainwires"]

[workspace.dependencies]
# Internal crates
supabase-client-core = { path = "crates/supabase-client-core", version = "0.2.1" }
supabase-client-query = { path = "crates/supabase-client-query", version = "0.2.1" }
supabase-client-derive = { path = "crates/supabase-client-derive", version = "0.2.1" }
supabase-client-auth = { path = "crates/supabase-client-auth", version = "0.2.1" }
supabase-client-realtime = { path = "crates/supabase-client-realtime", version = "0.2.1" }
supabase-client-storage = { path = "crates/supabase-client-storage", version = "0.2.1" }
supabase-client-functions = { path = "crates/supabase-client-functions", version = "0.2.1" }
supabase-client-sdk = { path = "crates/supabase-client-sdk", version = "0.2.1" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono", "uuid"] }

# Async
tokio = { version = "1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Types
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }

# HTTP client (for auth/storage)
reqwest = { version = "0.12", features = ["json"] }
url = "2"

# WebSocket (for realtime — native only, per-crate conditional)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Base64 (for JWT parsing)
base64 = "0.22"

# PKCE (for OAuth client-side flow)
sha2 = "0.10"
rand = "0.9"

# Proc macros
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
