[package]
name = "supabase-client-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Auth (GoTrue) client for supabase-client"

[dependencies]
supabase-client-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
totp-rs = { version = "5", features = ["gen_secret"] }
