[package]
name = "supabase-client-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Auth (GoTrue) client for supabase-client"
keywords = ["supabase", "auth", "gotrue", "authentication", "oauth"]
categories = ["authentication", "web-programming::http-client"]

[dependencies]
supabase-client-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio = { workspace = true }
chrono.workspace = true
uuid.workspace = true
url.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
totp-rs = { version = "5", features = ["gen_secret"] }
