[package]
name = "supabase-client-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types for supabase-client: connection, config, errors, response"

[features]
default = []
direct-sql = ["dep:sqlx"]

[dependencies]
sqlx = { workspace = true, optional = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
url.workspace = true
