[package]
name = "supabase-client-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core types for supabase-client: connection, config, errors, response"
readme = "README.md"
keywords = ["supabase", "client", "rest", "postgrest", "database"]
categories = ["database", "web-programming::http-client"]

[features]
default = []
direct-sql = ["dep:sqlx"]

[dependencies]
sqlx = { workspace = true, optional = true }
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
gloo-timers.workspace = true
getrandom.workspace = true
futures-util.workspace = true
