[package]
name = "supabase-client-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Derive macros for supabase-client (#[derive(Table)])"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
