[package]
name = "supabase-client-functions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Edge Functions client for supabase-client"
readme = "README.md"
keywords = ["supabase", "edge-functions", "serverless", "deno", "functions"]
categories = ["web-programming::http-client"]

[dependencies]
supabase-client-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
