[package]
name = "supabase-client-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Realtime WebSocket client for supabase-client"
keywords = ["supabase", "realtime", "websocket", "phoenix-channels", "pubsub"]
categories = ["network-programming", "web-programming::websocket"]

[dependencies]
supabase-client-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true }
supabase-client-core.workspace = true
