[package]
name = "supabase-client-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Storage HTTP client for supabase-client"
readme = "README.md"
keywords = ["supabase", "storage", "object-storage", "file-upload", "s3"]
categories = ["filesystem", "web-programming::http-client"]

[dependencies]
supabase-client-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
