[package]
name = "supabase-client-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WASM/TypeScript bindings for supabase-client-sdk"
readme = "README.md"
keywords = ["supabase", "wasm", "typescript", "webassembly", "javascript"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
supabase-client-sdk = { workspace = true, features = ["full"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
