[package]
name = "supabase-client-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rust client for Supabase with fluent API — REST by default, direct SQL opt-in"
keywords = ["supabase", "client", "database", "rest", "baas"]
categories = ["database", "web-programming::http-client"]

[features]
default = ["query", "derive"]
query = ["dep:supabase-client-query"]
derive = ["dep:supabase-client-derive"]
auth = ["dep:supabase-client-auth"]
realtime = ["dep:supabase-client-realtime"]
storage = ["dep:supabase-client-storage"]
functions = ["dep:supabase-client-functions"]
direct-sql = ["supabase-client-core/direct-sql", "supabase-client-query?/direct-sql"]
full = ["query", "derive", "auth", "realtime", "storage", "functions"]

[dependencies]
supabase-client-core.workspace = true
supabase-client-query = { workspace = true, optional = true }
supabase-client-derive = { workspace = true, optional = true }
supabase-client-auth = { workspace = true, optional = true }
supabase-client-realtime = { workspace = true, optional = true }
supabase-client-storage = { workspace = true, optional = true }
supabase-client-functions = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[[example]]
name = "query_basics"
required-features = ["query"]

[[example]]
name = "typed_queries"
required-features = ["query", "derive"]

[[example]]
name = "advanced_queries"
required-features = ["query"]

[[example]]
name = "auth"
required-features = ["auth"]

[[example]]
name = "realtime"
required-features = ["realtime"]

[[example]]
name = "storage"
required-features = ["storage"]

[[example]]
name = "functions"
required-features = ["functions"]

[[example]]
name = "full_client"
required-features = ["full"]
